[gd_scene load_steps=4 format=2]

[ext_resource path="res://Characters/TopDown/TopDown.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="TopDown" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
walk_speed = 450

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="Sprite" index="0"]

points = PoolVector2Array( 0, 32, 0, 0, 32, 0 )
width = 10.0
default_color = Color( 0.4, 0.5, 1, 1 )
texture_mode = 1
sharp_limit = 2.0
round_precision = 8

[node name="SwordPosition" type="Position2D" parent="Sprite" index="1"]

position = Vector2( 64, 0 )

[node name="SwordPosition2" type="Position2D" parent="Sprite" index="2"]

position = Vector2( 0, 64 )
rotation = 1.5708
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="AttackCooldown" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false


